--- a/pizza-lucy/src/styles/menus.css
+++ b/pizza-lucy/src/styles/menus.css
@@ -10,7 +10,7 @@
 
 .breakfastMenu {
     background: url(../images/meseros-02.jpg);
-  height: 551px;
+  height: 768px;
   background-position: center;
   background-repeat: no-repeat; 
   background-size: cover;
@@ -27,6 +27,7 @@
 box-sizing: border-box;
 border-radius: 51px;
 margin-top: 20px;
+height: 500px;
 }
 
 .ordersMenu {
@@ -35,4 +36,10 @@ border: 1px solid #FFFFFF;
 box-sizing: border-box;
 border-radius: 30px;
 margin-top: 20px;
+}
+
+.inputCostumer{
+    font-size: 18px;
+    margin: 10px;
+    border-radius: 10px;
 }
