--- a/pizza-lucy/src/styles/menus.css
+++ b/pizza-lucy/src/styles/menus.css
@@ -15,7 +15,6 @@
   background-repeat: no-repeat; 
   background-size: cover;
   display: flex;
-  
 }
 
 .breakfastContentCards {
@@ -23,11 +22,17 @@
 }
 
 .foodCards{
-    border: 3px solid #FFFFFF;
+border: 3px solid #FFFFFF;
 box-sizing: border-box;
 border-radius: 51px;
 margin-top: 20px;
 height: 500px;
+}
+
+.showCards {
+    position: relative;
+    top: 20px;
+    
 }
 
 .ordersMenu {
