--- a/pizza-lucy/src/styles/menus.css
+++ b/pizza-lucy/src/styles/menus.css
@@ -34,6 +34,12 @@ height: 500px;
     top: 20px;
     
 }
+.itemsOrders{
+    color: white;
+    text-align: center;
+    padding: 3px;
+    border-bottom: 3px solid #FFFFFF
+}
 
 .ordersMenu {
     background: #243540;
