Adding the router and create the components parents of kitchen and orders with style

--- a/pizza-lucy/src/styles/menus.css
+++ b/pizza-lucy/src/styles/menus.css
@@ -9,7 +9,7 @@
 }
 
 .breakfastMenu {
-    background: url(../images/meseros-02.jpg);
+    background: url(../images/meseros.jpg);
   height: 768px;
   background-position: center;
   background-repeat: no-repeat; 
