--- a/pizza-lucy/src/App.css
+++ b/pizza-lucy/src/App.css
@@ -1,7 +1,7 @@
 
 .App-header {
-  background: url(./images/pizza2.jpg);
-  height: 551px; /* You must set a specified height */
+  background: url(./images/home.jpg);
+  height: 768px; /* You must set a specified height */
   background-position: center; /* Center the image */
   background-repeat: no-repeat; /* Do not repeat the image */
   background-size: cover;
