--- a/pizza-lucy/src/styles/menus.css
+++ b/pizza-lucy/src/styles/menus.css
@@ -19,6 +19,15 @@
 
 .breakfastContentCards {
     margin: 20px;
+    border: 3px solid #FFFFFF;
+box-sizing: border-box;
+border-radius: 51px;
+margin-top: 20px;
+height: 500px;
+}
+
+.border {
+    border: 3px solid #FFFFFF;
 }
 
 .foodCards{
