--- a/pizza-lucy/src/styles/menus.css
+++ b/pizza-lucy/src/styles/menus.css
@@ -1,4 +1,13 @@
-.breakfastCards {
+.menus {
+      background: url(../images/meseros.jpg);
+      height: 768px;
+      background-position: center;
+      background-repeat: no-repeat; 
+      background-size: cover;
+      display: flex;
+    }
+
+.foodCards {
     color: white;
     background-color: #F27304;
     margin : 15px;
@@ -8,41 +17,28 @@
     border-radius: 10px;
 }
 
-.breakfastMenu {
-    background: url(../images/meseros.jpg);
-  height: 768px;
-  background-position: center;
-  background-repeat: no-repeat; 
-  background-size: cover;
-  display: flex;
-}
-
-.breakfastContentCards {
-    margin: 20px;
+.foodContentCards {
     border: 3px solid #FFFFFF;
 box-sizing: border-box;
 border-radius: 51px;
 margin-top: 20px;
-height: 500px;
+height: 550px;
+
 }
 
-.border {
-    border: 3px solid #FFFFFF;
-}
-
-.foodCards{
-border: 3px solid #FFFFFF;
-box-sizing: border-box;
-border-radius: 51px;
-margin-top: 20px;
-height: 500px;
-}
-
-.showCards {
+.breakfastContainerCards {
     position: relative;
-    top: 20px;
-    
+    left: -300px;
+    width: 600px;
 }
+
+.lunchContainerCards {
+    position: relative;
+    left: -450px;
+    top: 60px;
+    width: 600px;
+}
+
 .itemsOrders{
     color: white;
     text-align: center;
@@ -50,16 +46,44 @@ height: 500px;
     border-bottom: 3px solid #FFFFFF
 }
 
-.ordersMenu {
+.foodItems{
+    width: 300px;
+    position: absolute;
+}
+
+.itemsTickets{
+    width: 300px;
+    position: absolute;
+    left: 300px
+}
+
+
+.ticketList {
     background: #243540;
 border: 1px solid #FFFFFF;
 box-sizing: border-box;
 border-radius: 30px;
 margin-top: 20px;
+text-align: center;
+color: white;
+position: relative;
+width: 250px;
+height: 350px
+}
+.itemsName{
+    padding: 5px;
 }
 
 .inputCostumer{
     font-size: 18px;
     margin: 10px;
     border-radius: 10px;
+}
+
+.input-form{
+    padding: 7px;
+}
+
+.btn-input {
+    background: #243540;
 }
