--- a/pizza-lucy/src/styles/Buttons.css
+++ b/pizza-lucy/src/styles/Buttons.css
@@ -15,6 +15,13 @@
     text-align: center
   }
 
+.buttonsInicio:hover{
+  color:#F2B604
+}
+.navOrdersButton{
+  height: 50px;
+}
+
 #buttonBackHome {
   background-color: #5A7202;
   width: 110px;
