--- a/pizza-lucy/src/styles/menus.css
+++ b/pizza-lucy/src/styles/menus.css
@@ -17,12 +17,26 @@
     border-radius: 10px;
 }
 
+.updateButton {
+    color: black;
+    background-color: #F2B604;
+    margin : 10px;
+    display: flex;
+    font-size: 20px;
+    border-radius: 10px;
+    text-align: center;
+    padding: 7px;
+    position: relative;
+    left: 30px;
+}
+
 .foodContentCards {
     border: 3px solid #FFFFFF;
 box-sizing: border-box;
 border-radius: 51px;
 margin-top: 20px;
 height: 550px;
+width: 250px;
 
 }
 
@@ -86,4 +100,12 @@ height: 350px
 
 .btn-input {
     background: #243540;
+}
+
+.deletItems {
+    background: #F27304;
+    border: 1px solid #FFFFFF;
+    border-radius: 10px;
+    text-align: center;
+    color: white;
 }
